<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/background_white_top_radius"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:layout_gravity="start"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_toLeftOf="@+id/imgClose"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="start"
            android:text="@string/special_instructions"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgClose" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/dp_45"

            android:layout_height="@dimen/dp_45"
            android:layout_alignParentEnd="true"

            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="Cancel"
            android:padding="@dimen/dp_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />
    </RelativeLayout>


    <EditText
        android:id="@+id/edMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:autofillHints=""
        android:textColorHint="@color/textPlaceHolder"
        android:background="@drawable/bg_edit_text"
        android:gravity="start"
        android:hint="@string/type_special_instructions"
        android:maxLines="4"
        android:minHeight="@dimen/dp_100"
        android:padding="@dimen/dp_10"
        android:text=""
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/poppins_medium"
        android:gravity="start"
        android:text="@string/the_restaurants_will_try_their_best_to_follow_your_cooking_instructions_but_no_cancellation_or_refund_will_be_proceed_if_your_is_not_met_with_chef"
        android:textColor="@color/colorTextHint"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_25"

        android:layout_marginTop="@dimen/dp_25"

        android:layout_marginBottom="@dimen/dp_60"
        android:background="@drawable/button_background_global"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_25"

        android:layout_marginBottom="@dimen/dp_20"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/resend_code"
        android:textColor="@color/colorText"
        android:textSize="@dimen/sp_15"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

</LinearLayout>