<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_20"
    >

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_50"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:contentDescription="@string/app_name"
        android:src="@drawable/welcome1_your_food"
        app:layout_constraintBottom_toTopOf="@+id/tvheader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"  />

    <TextView
        android:id="@+id/tvheader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:lineSpacingExtra="1pt"
        android:text="@string/language_is_no_barrier_wherever_you_are_in_the_world"
        android:textColor="@color/colorText"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dp_12"
        android:text="@string/with_scrhood_you_can_make_sure_you_get_exactly_what_you_want_before_your_order"
        android:textColor="@color/colorText"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_7"

        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/button_background_global"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>