<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorAppBg"
    android:clickable="true"
    android:focusable="true">

    <include
        android:id="@+id/viewHeader"
        layout="@layout/layout_toolbar_tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader">

        <RadioButton
            android:id="@+id/rbStore"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_45"
            android:layout_weight="0.5"
            android:background="@drawable/tab_selecter"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:inputType="text"
            android:padding="@dimen/dp_5"
            android:text="@string/restaurant"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16" />

        <RadioButton
            android:id="@+id/rbProduct"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_45"
            android:layout_weight="0.5"
            android:background="@drawable/tab_selecter"

            android:button="@null"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:inputType="text"
            android:padding="@dimen/dp_5"
            android:text="@string/dishes"
            android:textAllCaps="true"
            android:textColor="@color/textPlaceHolder"
            android:textSize="@dimen/sp_16" />

    </RadioGroup>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_20"
        android:paddingHorizontal="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgStatus">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/list_store_item" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorWhite"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@color/colorTextHint"

            android:textSize="@dimen/sp_17"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvStatusList" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


